Sun Nov 13 11:03:23 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Mixed_Sync_ASync_Events/main.cpp:
        * tests/Mixed_Sync_ASync_Events/test.idl:
        * tests/Mixed_Sync_ASync_Events/test_i.h:
        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
        
          Fixed Win32 compiler errors.

Sat Nov 12 10:41:33 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Transport.h:

          Fixed compile errors because of core changes from branch merge.

Fri Nov 11 11:22:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged rw_block_strategy branch.

        === start changelog ===

        Thu Nov 10 08:04:29 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * TAO/tests/Bug_3531b_Regression/server.cpp:

                  Fixed compiler error due to core changes.

        Wed Nov  9 08:24:29 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * tests/Mixed_Sync_ASync_Events/MixedSyncASyncEvents.mpc:
                * tests/Mixed_Sync_ASync_Events/main.cpp:
                * tests/Mixed_Sync_ASync_Events/run_test.pl:
                * tests/Mixed_Sync_ASync_Events/test.idl:
                * tests/Mixed_Sync_ASync_Events/test_i.cpp:
                * tests/Mixed_Sync_ASync_Events/test_i.h:

                  Added new regression test mixing Synch requests with
                  Asynch (AMI) and timer and notification events in a
                  (semi) random order.

                * tests/Mixed_Sync_ASync_Events/exclusive_rw.conf:
                * tests/Mixed_Sync_ASync_Events/exclusive_rw.conf.xml:
                * tests/Mixed_Sync_ASync_Events/run_exclusive_rw.pl:

                  Config and script to run the new test in full blocking
                  mode (RW, Exclusive TMS, blocking connect and flushing).

                * bin/tao_orb_tests.lst:
